--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-telegram-bot-api": "^0.30.0",
     "node-vibrant": "^3.0.0",
     "simple-node-logger": "^0.93.37",
+    "twit": "^2.2.11",
     "unzipper": "^0.9.2"
   },
   "devDependencies": {},
